--- a/README
+++ b/README
@@ -10,9 +10,11 @@
 customize your logical business code and not to care about networking 
 processing and event process. Mossad is responsible for them.
     
-    In demos directory, there are some demos which baseed on mossad. 
+    In demo directory, there is a echo back demo which baseed on mossad. 
 You can refer them to write your business code.
     
+    In cases directory, there are some production cases baseed on mossad. 
+
     Mossad refer to reids, nginx, gko_pool, verben .etc
 
 ============================= Notes ===============================
